修改BASE编码方法， 修正为常用方法。 原方法已在java9中废弃